Official Portfolio/src/Components/Navbar.css
.active {
    background-color: rgb(32, 32, 107);
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(14, 1, 44);
}

nav .title {
    font-size: 1.5rem;
    margin: 1rem;
    font-weight: bold;
    text-decoration: none;
    color: white;
}

nav ul {
    display: flex;
}

nav ul li {
    list-style: none;
}

nav ul li a {
    display: block;
    text-decoration: none;
    font-weight: bold;
    color: white;
    padding: 0.5rem;
    margin: 0 0.5rem;
    border-radius: 0.5rem;
}

nav ul li a:not(.active):hover {
    background-color: rgb(82, 82, 192);
}

